--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "set PUBLIC_URL=http://longntp.github.io/movies-challenge&&npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
